# kiwi-clients

./: .gitignore  Cargo.toml  package-lock.json  run-release.ps1  run.ps1
.github/workflows/: electron-build.yml
electron-app/: README.md  main.cjs
kiwi-3d/src/: main.js
kiwi-core/: Cargo.toml
kiwi-core/src/: lib.rs
kiwi-desktop/: package-lock.json  package.json
kiwi-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.desktop.conf.json
kiwi-desktop/src-tauri/src/: lib.desktop.rs  lib.rs  main.rs
plotly-app/: README.md  main.cjs  package-lock.json  package.json  preload.cjs
plotly-app/assets/: icon.icns
plotly-app/scripts/: prepare-binary.cjs
plotly-client/: Cargo.toml  build.rs
plotly-client/kiwi-3d/: package-lock.json  vite.config.js
plotly-client/kiwi-3d/src/: main.js
plotly-client/plotly-client/web/3d/: index.html
plotly-client/src/: broadcast.rs  main.rs  udp.rs
plotly-client/web/: dashboard.html  index.html  landing.js  plot.js  plot.worker.js  sse.shared.worker.js  styles.css
plotly-client/web/3d/: index.html
udp-dummy-server/: Cargo.toml
udp-dummy-server/src/: main.rs
